--- a/public/css/style.css
+++ b/public/css/style.css
@@ -324,6 +324,7 @@ body {
 }
 .header__logo img {
   height: 3.5rem;
+  margin-top: 0.3rem;
 }
 @media only screen and (max-width: 62.5em) {
   .header__logo {
