--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,6 +1,11 @@
 extends base
 include _reviewCard
 
+block append head 
+   script(src='https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.js')
+   link(href='https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.css' rel='stylesheet')
+   script(defer src='/js/mapbox.js')
+ 
 mixin overviewBox(label, text, icon)
    .overview-box__detail
       svg.overview-box__icon
@@ -66,7 +71,7 @@ block content
 
 
    section.section-map
-   #map
+      #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
    section.section-reviews
       .reviews
@@ -78,9 +83,11 @@ block content
       .cta
          .cta__img.cta__img--logo
             img(src='/img/logo-white.png', alt='Natours logo')
-         img.cta__img.cta__img--1(src='/img/tour-5-2.jpg', alt='')
-         img.cta__img.cta__img--2(src='/img/tour-5-1.jpg', alt='')
+         img.cta__img.cta__img--1(src=`/img/tours/${tour.images[1]}`, alt='Tour picture')
+         img.cta__img.cta__img--2(src=`/img/tours/${tour.images[2]}`, alt='Toyr picture')
          .cta__content
             h2.heading-secondary What are you waiting for?
-            p.cta__text 10 days. 1 adventure. Infinite memories. Make it yours today!
+            p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
             button.btn.btn--green.span-all-rows Book tour now!
+   
+   
