--- a/views/base.pug
+++ b/views/base.pug
@@ -22,3 +22,5 @@ html(lang="en")
       // FOOTER
       include _footer
                 
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js')
+      script(src='/js/login.js')
